[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/PageAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Book.gd" type="Script" id=2]
[ext_resource path="res://scenes/Page.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="QuadMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="QuadMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="QuadMesh" id=10]

[node name="Book" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 2 )
shadow_enabled = true
shadow_bias = 0.01
omni_shadow_mode = 0
omni_shadow_detail = 0

[node name="Book" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0, 0 )

[node name="Static" type="Spatial" parent="Book"]

[node name="PageLeft" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )

[node name="PageRight" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Turning" parent="Book" instance=ExtResource( 1 )]
visible = false

[node name="Back" parent="Book/Turning/Page" index="1"]
material_override = SubResource( 5 )

[node name="Front" parent="Book/Turning/Page" index="2"]
material_override = SubResource( 6 )

[node name="PageLeft" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 8 )

[node name="PageRight" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 10 )

[node name="Viewport1" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport1" instance=ExtResource( 3 )]

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport2" instance=ExtResource( 3 )]

[node name="Viewport3" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport3" instance=ExtResource( 3 )]

[node name="Viewport4" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport4" instance=ExtResource( 3 )]

[node name="Viewport5" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport5" instance=ExtResource( 3 )]

[node name="Viewport6" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport6" instance=ExtResource( 3 )]

[connection signal="animation_finished" from="Book/Turning/Page/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Book/Turning"]
